# rewriting-2015-project

./: .gitignore  CMakeLists.txt  README.md
dev-cpp/: Makefile.win  TicTacToe.dev  TicTacToe.layout  TicTacToe_private.h  TicTacToe_private.rc  TicTacToe_private.res
include/: BGIGame.h
src/BGIGame/: Application.cpp  GameObject.cpp  Input.cpp  Rect.cpp  Timer.cpp
src/TicTacToe/: main.cpp  main_legacy.cpp
src/TicTacToe/elements/: TestElement.hpp
src/TicTacToe/scenes/: IntroScene.hpp
